--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 /src/_firebase
+/.firebase
 
 # testing
 /coverage
@@ -18,6 +19,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+firebaserc
+firebase.json
+.firebaserc
 
 npm-debug.log*
 yarn-debug.log*
