--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.5.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.1",
